# CRMS-back-end

./: README.md  db.sqlite3  pyproject.toml  req.txt
accounts/: admin.py  forms.py  models.py  urls.py
accounts/api/: serializers.py  viewset.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_employer_id.py  0002_remove_customuser_usernameid_customuser_employer_id.py  0003_remove_customuser_employer_id.py  0004_rename_position_jobtitle_name_rename_role_role_name.py
chat/: admin.py  models.py  urls.py  views.py
chat/api/: serializers.py  viewset.py
chat/migrations/: 0001_initial.py
clients/: admin.py  models.py  urls.py  views.py
clients/api/: serializers.py  viewset.py
clients/migrations/: 0001_initial.py  0002_client_company.py  0003_alter_client_phone_number.py
config/: settings.py  urls.py
tasks/: admin.py  models.py  urls.py
tasks/api/: permissions.py  serializers.py  viewset.py
tasks/migrations/: 0001_initial.py  0002_alter_clientreq_task_category_and_more.py  0002_remove_task_department_and_more.py  0003_alter_task_action_taken.py  0004_task_status.py
templates/chat/: chat_room.html  index.html
